feat(contracts): mirror several SubscriptionRequest builder methods